[package]
name = "axum-blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
# axum = "0.8.8"
# tokio = {   version = "1.49.0", features = ["full"] }
# dotenvy = "0.15.7"
# thiserror = "2.0.18"
# tracing = "0.1.44"
# tracing-subscriber ={version =  "0.3.22", features = ["fmt", "env-filter"] }


